# adversarial-tracking

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml
scripts/: benchmark.py  convert_visdrone_to_yolo.py  modal_benchmark_gradient.py  modal_train.py  modal_train_yolo26.py  run_all_benchmarks.sh  train_visdrone.py  visualize_results.py
tracking_ws/: requirements.txt
tracking_ws/data/results/: dashboard.html
tracking_ws/data/results/finetuned/: report.html  results.json
tracking_ws/data/results/pretrained/: results.json
tracking_ws/data/results/yolo26n_finetuned/: gradient.json  report.html  results.json
tracking_ws/data/results/yolo26n_pretrained/: gradient.json  report.html  results.json
tracking_ws/data/results/yolov8n_finetuned/: gradient.json  results.json
tracking_ws/data/results/yolov8n_pretrained/: gradient.json  results.json
tracking_ws/src/tracking_adversarial/: README.md  package.xml  setup.cfg  setup.py
tracking_ws/src/tracking_adversarial/config/: params.yaml
tracking_ws/src/tracking_adversarial/launch/: adversarial.launch.py  baseline.launch.py  defended.launch.py  evaluation.launch.py
tracking_ws/src/tracking_adversarial/tracking_adversarial/: attack_node.py  defense_node.py  detection_node.py  evaluation_node.py  tracking_node.py  visualization_node.py  web_visualizer.py
tracking_ws/src/tracking_adversarial/tracking_adversarial/utils/: adversarial.py  defense_utils.py  degradation.py  gradient_attacks.py  metrics.py
